<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingX"
        android:orientation="vertical"
        app:layout_scrollFlags="scroll"
        app:layout_scrollInterpolator="@android:interpolator/linear">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName|textCapWords"
            android:singleLine="true" />


        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:singleLine="true"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="TextFields"
            android:autofillHints="" />
        <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:orientation="vertical" android:gravity="center">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/ingresarFecha"
                android:inputType="date"
                android:autofillHints="" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/confirmaFecha"
                android:textAllCaps="false"
                android:theme="@style/MiRaisedButton" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnConfirmarDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/boton_sig"
            android:textAlignment="center"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:theme="@style/MiRaisedButton"
            android:visibility="visible" />
    </LinearLayout>

</ScrollView>
